--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-﻿h2, h4 {
+﻿h2,
+h4 {
     font-family: 'Roboto', sans-serif;
     color: #444444;
     text-align: center;
@@ -19,7 +20,7 @@
 }
 
 g:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 footer {
@@ -45,14 +46,19 @@ footer {
     background-color: transparent;
 }
 
+input[type='checkbox'],
+input[type='checkbox'] + label {
+    cursor: pointer;
+}
+
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab button {
+}
+
+/* Style the buttons inside the tab */
+.tab button {
     background-color: inherit;
     float: left;
     border: none;
@@ -63,20 +69,20 @@ footer {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     color: black;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
     background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
     background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
+}
+
+/* Style the tab content */
+.tabcontent {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
@@ -84,4 +90,4 @@ footer {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     color: #444444;
-  }
+}
